--- a/index.html
+++ b/index.html
@@ -16,27 +16,29 @@
                 />
             </div>
 
-            <div class="container">
 
-                <nav id="nav-bar">
-                    <ul>
-                        <li>
-                            <a class="nav-link" href="#features">Features</a>
-                        </li>
-                        <li>
-                            <a class="nav-link" href="#how-it-works">How It Works</a>
-                        </li>
-                        <li>
-                            <a class="nav-link" href="#pricing">Pricing</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
+
+            <nav id="nav-bar">
+                <ul>
+                    <li>
+                        <a class="nav-link" href="#features">Features</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="#how-it-works">How It Works</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="#pricing">Pricing</a>
+                    </li>
+                </ul>
+            </nav>
+
 
         </header>
 
         <section id="hero">
-            <h2><a href="images/css-2b.png">Cell-phone tower simulation surveillance equipment</a></h2>
+            <h2>
+                <a href="images/css-2b.png">Cell-phone tower simulation surveillance equipment</a>
+            </h2>
             <form id="form" action="https://www.freecodecamp.com/email-submit">
                 <input name="email" id="email" type="email" placeholder="Enter your email address" required/>
                 <input id="submit" type="submit" value="Get Started" class="btn"></input>
@@ -45,7 +47,7 @@
 
 
         <div class="container">
-            
+
             <section id="features">
 
                 <div class="grid">
@@ -76,7 +78,7 @@
                     </div>
                 </div>
             </section>
-            
+
             <div id="how-it-works">
                 <iframe id="video" height="315" src="https://www.youtube-nocookie.com/embed/ZmtCIG6sJXo?rel=0&amp;controls=0&amp;showinfo=0&amp;start=40"
                     frameborder="0"></iframe>
